Fixed About me Spacing

--- a/styles.css
+++ b/styles.css
@@ -70,6 +70,7 @@ p {
     width: 100%;
     max-width: 300px; 
     height: auto; 
+    margin-left: 5px;
 }
  
 
@@ -286,14 +287,17 @@ p {
 #about-me-container {
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-around; 
   width: 100%;
 }
 
 #about-image {
   width: 30%;
-  padding: 10px;
+  padding: 20px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
 }
 
 #about-image img {
@@ -302,10 +306,11 @@ p {
 
 #about-me-text-2  {
   display: flex;
-  flex-direction: row;
+  justify-content: flex-start;
+  align-content: flex-start;
   width: 100%;
-  padding: 20px;
-  text-align: justify;
+  padding-right: 20px;
+  text-align: left;
 }
 /* PROJECTS SECTION */
 
